--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
 .hello-accio{
-	width="150px";
-	height="150px";
+	width:150px;
+	height:150px;
 	background-color: black;
-};
+}
 .hello-accio{
-	color="#ffffff";
-	margin-left="32px";
-	padding="10px"
+	color:#ffffff;
+	margin-left:32px;
+	padding:10px;
 }
