--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
 /* Your CSS Code here. */
-.hello-accio{
-	width:150px !important;
-	height:150px !important;
+.main{
+	width:150px;
+	height:150px;
 	background-color: black;
 }
 .hello-accio{
